--- a/wbl_indicators/.gitattributes
+++ b/wbl_indicators/.gitattributes
@@ -1,1 +1,3 @@
 data/wbl_index.geojson filter=lfs diff=lfs merge=lfs -text
+data/workplace.geojson filter=lfs diff=lfs merge=lfs -text
+data/pay.geojson filter=lfs diff=lfs merge=lfs -text
